--- a/css/listadoProductos.css
+++ b/css/listadoProductos.css
@@ -59,6 +59,7 @@
    width: 3rem;
 }
 
+/*seccion de categorias*/
 .contenedor-categoria{
     display: flex;
     flex-direction: column;
@@ -82,6 +83,15 @@
     text-align: center;
 }
 
+/*sidebar*/
+
+.boton-filtro{
+    width: 100%;
+}
+.contenedor-dropdown{
+    padding: 0,5rem;
+    border: #000000 solid 1px;
+}
 /*Productos*/
 
 .producto{
@@ -90,7 +100,16 @@
     border-radius: 1rem;
     width: 15rem;
     height: 25rem;
+}
 
+@media screen and (max-width: 575px) {
+    .producto{
+        margin: 2rem;
+        padding: 1rem;
+        border-radius: 1rem;
+        width: 30rem;
+        height: 40rem;
+    }  
 }
 
 footer {
