--- a/css/producto.css
+++ b/css/producto.css
@@ -67,6 +67,10 @@
         max-width: 5rem;
     }
 }
+/*descripcion*/
+.Descripcion{
+    border-top: gray 1px solid;
+}
 /*footer*/
 footer {
     background-color: #50734D;
