Añadir estilos a la tarjeta de pago en pago.css, añadir img de pago exitoso y arreglar footer

--- a/css/pago.css
+++ b/css/pago.css
@@ -38,6 +38,9 @@
     align-items: center;
 
 }
+.contenedor-tarjeta{
+    border: transparent;
+}
 /*footer*/
 footer {
     background-color: #50734D;
