Cambiar ancho de la tarjeta de productos a 100vw en listadoProductos.css

--- a/css/listadoProductos.css
+++ b/css/listadoProductos.css
@@ -107,7 +107,7 @@
         margin: 2rem;
         padding: 1rem;
         border-radius: 1rem;
-        width: 30rem;
+        width: 100vw;
         height: 40rem;
     }  
 }
