--- a/css/listadoProductos.css
+++ b/css/listadoProductos.css
@@ -83,13 +83,19 @@
     text-align: center;
 }
 
+a {
+    color: #000000;
+}
 /*sidebar*/
 
+.texto-filtro{
+    border-bottom: #000000 solid 1px;
+}
 .boton-filtro{
     width: 100%;
     padding: 0rem;
     margin: 0rem;
-    background-color: #50734D;
+    background-color: #0D4A00;
     color: #FFFFFF;
 }
 .contenedor-dropdown{
@@ -106,6 +112,10 @@
     height: 25rem;
 }
 
+.boton-comprar{
+    background-color: #5BB600;
+    color: #FFFFFF;
+}
 @media screen and (max-width: 575px) {
     .producto{
         margin: 2rem;
@@ -117,7 +127,7 @@
 }
 
 footer {
-    background-color: #50734D;
+    background-color: #2B2B2B;
     color: #FFFFFF;
     text-align: start;
     width: 100%;
