Corrección de estilos en el footer y en la tarjeta de productos en listadoProductos.css. Se añado la hoja de estilo de pagoExitoso

--- a/css/carrito.css
+++ b/css/carrito.css
@@ -44,7 +44,7 @@
 }
 
 footer {
-    background-color: #50734D;
+    background-color: #2B2B2B;
     color: #FFFFFF;
     text-align: start;
     width: 100%;
