--- a/css/producto.css
+++ b/css/producto.css
@@ -73,7 +73,7 @@
 }
 /*footer*/
 footer {
-    background-color: #50734D;
+    background-color: #2B2B2B;
     color: #FFFFFF;
     text-align: start;
     width: 100%;
