Corrección de estilos en la tarjeta de pago y en el footer en pago.html, se agrega el boton volver atras a carrito, pago y producto

--- a/css/producto.css
+++ b/css/producto.css
@@ -67,6 +67,10 @@
         max-width: 5rem;
     }
 }
+.boton-volver img{
+    width: 2rem;
+    height: 2rem;
+}
 /*descripcion*/
 .Descripcion{
     border-top: gray 1px solid;
