--- a/css/carrito.css
+++ b/css/carrito.css
@@ -42,7 +42,10 @@
 .basurero {
     width: 2rem;
 }
-
+.boton-volver img{
+    width: 2rem;
+    height: 2rem;
+}
 footer {
     background-color: #2B2B2B;
     color: #FFFFFF;
