--- a/css/pago.css
+++ b/css/pago.css
@@ -41,6 +41,11 @@
 .contenedor-tarjeta{
     border: transparent;
 }
+
+.boton-volver img{
+    width: 2rem;
+    height: 2rem;
+}
 /*footer*/
 footer {
     background-color: #2B2B2B;
