--- a/css/contacto.css
+++ b/css/contacto.css
@@ -50,7 +50,19 @@
     padding: 1rem;
     width: 90%;
 }
-
+@media screen and (max-width: 768px){
+    .contenedor-contacto{
+        flex-direction: column;
+        height: 60rem;
+    }
+    
+}
+@media screen and (max-width: 576px){
+    .contenedor-contacto{
+        height: 70rem;
+    }
+    
+}
 .boton-volver img{
     width: 2rem;
     height: 2rem;
