--- a/css/historialCompra.css
+++ b/css/historialCompra.css
@@ -38,6 +38,17 @@
     align-items: center;
 }
 
+.requerimiento {
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-left: 0.7rem;
+}
+.validador {
+    width: 1rem;
+    margin-left: 0.5rem;
+    position: relative;
+    top: -0.5rem;
+}
 .boton-volver img{
     width: 2rem;
     height: 2rem;
