--- a/css/pago.css
+++ b/css/pago.css
@@ -38,6 +38,18 @@
     align-items: center;
 
 }
+
+.requerimiento {
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-left: 0.7rem;
+}
+.validador {
+    width: 1rem;
+    margin-left: 0.5rem;
+    position: relative;
+    top: -0.5rem;
+}
 .contenedor-tarjeta{
     border: transparent;
 }
