--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     transition: 0.3s; /* Add transition on hover */
     padding: 15px; /* 15px padding */
     width: 155px; /* Set a specific width */
+    height: 50px; /* Set a specific height */
     text-decoration: none; /* Remove underline */
     font-size: 20px; /* Increase font size */
     color: white; /* White text color */
@@ -25,22 +26,24 @@
   /* The about link: 20px from the top with a green background */
   #inventario {
     top: 20px;
-    background-color: #04AA6D;
+    background-color: #029962;
   }
   
   #pedidos {
     top: 80px;
-    background-color: #2196F3; /* Blue */
+    background-color: #029962; 
   }
   
   #usuarios {
     top: 140px;
-    background-color: #f44336; /* Red */
+    background-color: #029962; 
   }
-
+.text-sidebar{
+    font-size: 1.2rem;
+}
 .img-sidebar{
     width: 1rem;
-}
+  }
 
 /*carousel*/
 .carousel-item img {
