chore: Actualizar estilos de la barra de navegación y formulario de inicio de sesión

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -80,3 +80,12 @@
 label{
     color: black;
 }
+
+#text-boton-inicio-sesion{
+    color: white;
+    font-size: 0.8rem;
+
+}
+#img-iniciar-sesion{
+    width: 2rem;
+}
